Adding new things and translations.

--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -3,6 +3,9 @@
     "about": "O mně",
     "resume": "CV",
     "projects": "Projekty",
+    "technologie": "Moje dovednosti",
+    "future-technologie": "Technologie, které se plánuji naučit",
+    "find-me": "Najdete mě na",
     "pageTitle": "Welcome to Astro.",
     "welcome": "Welcome to <0>Astro</0>",
     "instructions": "Checkout the <0>src/pages</0> directory to get started.<1><2>Code Challenge:</2> Translate this page with your language of choice.",
