--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,6 +3,9 @@
   "about": "About",
   "resume": "Resume",
   "projects": "Projects",
+  "technologie": "My Skill",
+  "future-technologie": "Technologie I plan to learn",
+  "find-me": "Find me on",
   "pageTitle": "Welcome to Astro.",
   "welcome": "Welcome to <0>Astro</0>",
   "instructions": "Checkout the <0>src/pages</0> directory to get started.<1><2>Code Challenge:</2> Translate this page with your language of choice.",
