Add new translation and change some styles.

--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -3,28 +3,14 @@
     "about": "O mně",
     "resume": "CV",
     "projects": "Projekty",
+    "about-me": "Jmenuji se Pavel. Jsem vývojář z České republiky a v současné době se zajímám o backend vývoj v Javě a Springu. V současné době pracuji jako juniorní full-stack vývojář ve společnosti <a target='_blank' class='cactus-link' href='https://www.kpsys.cz/'>KPSYS</a>",
     "technologie": "Moje dovednosti",
     "future-technologie": "Technologie, které se plánuji naučit",
     "find-me": "Najdete mě na",
-    "pageTitle": "Welcome to Astro.",
-    "welcome": "Welcome to <0>Astro</0>",
-    "instructions": "Checkout the <0>src/pages</0> directory to get started.<1><2>Code Challenge:</2> Translate this page with your language of choice.",
-    "cards": {
-        "documentation": {
-            "title": "Documentation",
-            "body": "Learn how Astro works and explore the docs."
-        },
-        "integrations": {
-            "title": "Integrations",
-            "body": "Supercharge your projects with new frameworks and libraries."
-        },
-        "themes": {
-            "title": "Themes",
-            "body": "Explore a galaxy of community-built starter themes."
-        },
-        "chat": {
-            "title": "Chat",
-            "body": "Come and say hi to our amazing Discord community. ❤️"
+    "project": {
+        "wren": {
+            "title": "Wren Interpret",
+            "description": "Jednoduchý Wren interpret s grafickým editorem"
         }
     }
 }
