--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -3,7 +3,7 @@
     "about": "O mně",
     "resume": "CV",
     "projects": "Projekty",
-    "about-me": "Jmenuji se Pavel. Jsem vývojář z České republiky a v současné době se zajímám o backend vývoj v Javě a Springu. V současné době pracuji jako juniorní full-stack vývojář ve společnosti <a target='_blank' class='cactus-link' href='https://www.kpsys.cz/'>KPSYS</a>",
+    "about-me": "Jmenuji se Pavel. Jsem vývojář a v současné době se zajímám o backend vývoj v Javě a Springu. V současné době pracuji jako juniorní full-stack vývojář ve společnosti <a target='_blank' class='cactus-link' href='https://www.kpsys.cz/'>KPSYS</a>",
     "technologie": "Moje dovednosti",
     "future-technologie": "Technologie, které se plánuji naučit",
     "find-me": "Najdete mě na",
