Fix project page.

--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -4,6 +4,7 @@
     "resume": "CV",
     "projects": "Projekty",
     "about-me": "Jmenuji se Pavel. Jsem vývojář a v současné době se zajímám o backend vývoj v Javě a Springu. V současné době pracuji jako juniorní full-stack vývojář ve společnosti <a target='_blank' class='cactus-link' href='https://www.kpsys.cz/'>KPSYS</a>",
+    "projects-text": "Na této stránce najdete některé z projektů, na kterých jsem pracoval.",
     "technologie": "Moje dovednosti",
     "future-technologie": "Technologie, které se plánuji naučit",
     "find-me": "Najdete mě na",
