--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
     "resume": "Resume",
     "projects": "Projects",
     "about-me": "My name is Pavel. I am a developer based in the Czech Republic currently interested in backend development with Java and Spring. I currently work as Junior Full-stack developer at <a target='_blank' class='cactus-link' href='https://www.kpsys.cz/'>KPSYS</a>",
+    "projects-text": "On this page, you can find some of the projects that I worked on.",
     "technologie": "My Skill",
     "future-technologie": "Technologie I plan to learn",
     "find-me": "Find me on",
